<resources>
    <string name="app_name">Agenda</string>
    <string name="title_activity_menu">Menu Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="login_user">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_code">Código de IS</string>

    <string name="menu_dates">Mis citas</string>
    <string name="menu_status">Sin status</string>
    <string name="menu_logout">Cerrar Sesión</string>

    <string name="title_activity_dates">Mis Citas</string>
    <string name="title_activity_status">Sin Status</string>

    <string name="info_date_title">Información de la Cita</string>
    <string name="info_date_applicant">Solicitante:</string>
    <string name="info_date_number">Matricula:</string>
    <string name="info_date_career">Carrera:</string>
    <string name="info_date_mail">Correo:</string>
    <string name="info_date_responsable">Responsable:</string>
    <string name="info_date_reasons">Razones de la cita:</string>
    <string name="confirm_date_confirmationmsg">*Confirma la hora de la cita</string>
    <string name="info_date_date">Fecha:</string>
    <string name="Alert_btnAccept">Aceptar</string>
    <string name="Alert_btnDecline">Rechazar</string>
    <string name="loginBtn_description">Botón Iniciar Sesión</string>
    <string name="navDrawerTitle">Bienvenido</string>

</resources>