<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_app_icon"
    android:backgroundTint="#6F000000"
    android:backgroundTintMode="src_over"
    tools:context=".activities.LoginActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUser"
        style="@style/tilLogin"
        android:layout_marginStart="50dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextLogin"
            android:hint="@string/login_user"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUser"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextLogin"
            android:hint="@string/login_password"
            android:autofillHints="password"
            android:inputType="textPassword"

            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilISCode"
        style="@style/tilPassword"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/isCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextLogin"
            android:hint="@string/login_code"
            android:autofillHints="password"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <ImageButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilISCode"
        app:layout_constraintVertical_bias="0.35"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/loginBtn_description" />


</androidx.constraintlayout.widget.ConstraintLayout>